frontend/src/sass/_navbar.scss
.navigation-bar{
  height: 50px;
  width: 100%;
  background: rgb(126, 184, 136);
  position: relative;
  overflow: hidden;

  &__ul{
    display: grid;
    grid-template-columns: auto auto auto auto 1fr auto auto;
    grid-template-areas: "logo leaderboard about forum . profile logout";

    .nav-logo{
      grid-area: logo;
      height: 50px;
      a{
        display: grid;
        height: 50px;
        align-content: center;
        .logo-img{
          width: 100px;
          height: 50px;
          img{
            width: 100%;
            height: 100%;
            object-fit: contain;
          }
        }
      }
    }

    &>li{
      text-align: center;
      height: 50px;
      list-style: none;
      width: auto;
      &:hover{
        background: rgb(102, 146, 110);
      }
      &:hover a{
        color: white;
      }
      
      &>a{
        padding: 0px 10px;
        display: block;
        i, span{
          display: block;
          line-height: 25px;
        }
        span{
          margin-top: -7px;
          padding-bottom: 7px;
        }
        i{
          padding-top: 2px;
          font-size: 1rem;
        }
      }

      &>*{
        font-family: $ff-roboto;
        font-size: 1.05rem;
        color: black;
        text-decoration: none;
      }
    }

    .nav-about{
      grid-area: leaderboard;
    }
    .nav-leaderboard{
      grid-area: about;
    }
    .nav-forum{
      grid-area: forum;
    }
    .nav-logout, .nav-register{
      grid-area: profile;
      line-height: 50px;
    }
    .nav-profile, .nav-login{
      grid-area: logout;
      line-height: 50px;
    }
    .nav-profile i{
      line-height: 50px;
      font-size: 1.25em;
    }
    .mobile-links-container{
      display: none;
    }
    // ul
    @media(max-width: 560px){
      grid-template-columns: auto 1fr;
      grid-template-areas: "logo hamburger";
      
      &>li:not(:nth-child(1)){
        display: none;
      }
      .mobile-links-container.show{
        display: grid;
      }
      .mobile-links-container.slide{
        transform: translateY(0px);
        transition: transform 250ms ease;
      }
      .mobile-links-container{
        transform: translateY(-250px);
        transition: transform 250ms ease;
        
        display: none;
        width: 100%;
        height: auto;
        grid-template-columns: 1fr;
        grid-auto-rows: 50px;
        position: absolute;
        top: 50px;
        left: 0;
        background: rgb(102, 143, 109);
        z-index: 99;
        li{
          font-family: Verdana, Geneva, Tahoma, sans-serif;
          grid-area: unset;
          box-shadow: 0px 4px 4px -3px rgba(0, 0, 0, 0.75);
      
          &>a{
            line-height: 50px;
            width: 100%;
            height: 100%;
            padding: 0 10px;
            display: block;
            text-decoration: none;
            color: black;
            font-weight: 900;
            &:hover{
              // background: rgba(0, 255, 38, 0.486);
              color: white;
            }
          }
          
        }
      }
    }

    
     .burger{
       width: 100%;
       height: 100%;
       display: none;
       font-size: 2em;
       grid-area: hamburger;
       &:hover{
         cursor: pointer;
         color: white;
       }
       @media(max-width: 560px){
         display: grid;
         align-items: center;
         justify-items: center;
       }
     }
    
   

  }
}

